# xcpc-templates-cplusplus

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
basic/: CMakeLists.txt  allocator.hpp  allocator_bench.cpp  binary_search.hpp  binary_search_test.cpp
串/: CMakeLists.txt  hash.hpp  hash_test.cpp
数学/: CMakeLists.txt  fft.hpp  karatsuba.hpp  mersenne_mod.hpp  mersenne_mod_test.cpp  mod_bench.cpp  modint.hpp  mul_bench.cpp  mul_test.cpp  ntt.hpp
数据结构/: CMakeLists.txt  dsu.hpp  dsu_test.cpp  fenwick.hpp  fenwick_test.cpp  segtr.hpp  segtree.hpp  segtree_test.cpp
